Fix content alignment in multiple postboxes and text styling

--- a/style/cruftfiles.css
+++ b/style/cruftfiles.css
@@ -55,7 +55,6 @@
 
 .cruft-tool-selector {
   background-color: #F9F9F9;
-  padding-left: 7px;
   font-weight: 600;
   height: 45px;
 }
